# moon_web

./: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  index.html
assets/css/: index.scss
src/: component.rs  element.rs  err.rs  lib.rs  main.rs  router.rs  service.rs  util.rs
src/component/: container.rs  menu.rs  modal.rs
src/components/: menu.rs
src/service/: mod.rs
src/view/: home.rs
src/views/: home.rs
