[package]
name = "moon_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
console_log = "1.0.0"
js-sys = "0.3.69"
json = "0.12.4"
log = "0.4.21"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = "0.3.66"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
